--- a/.github/workflows/merge-develop-into-list-command.yml
+++ b/.github/workflows/merge-develop-into-list-command.yml
@@ -11,6 +11,5 @@ jobs:
     steps:
       - name: Merge develop -> list-command
         uses: actions/checkout@v3
-      - run: echo "Hello"
-      #|
-      #    curl -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" https://api.github.com/repos/andrew-zhan139/aws-sam-cli/merges -d '{"base":"test-list-command","head":"test-branch","commit_message":"merge test-list-command into test-branch"}'
+      - run: |
+          curl -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" https://api.github.com/repos/andrew-zhan139/aws-sam-cli/merges -d '{"base":"test-list-command","head":"test-branch","commit_message":"merge test-list-command into test-branch"}'
