Added test comment to create difference

--- a/.github/workflows/merge-develop-into-list-command.yml
+++ b/.github/workflows/merge-develop-into-list-command.yml
@@ -3,7 +3,7 @@ name: Merge the develop branch into the list-command branch
 on:
   schedule:
     - cron: '*/5 * * * *'
-
+#test comment
 jobs:
   update-branch:
     #if: github.repository == 'andrew-zhan139/aws-sam-cli'
